parsing arguments from client program

--- a/projects/project_2/CMakeLists.txt
+++ b/projects/project_2/CMakeLists.txt
@@ -3,4 +3,4 @@ project(project_2 C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(project_2 main.c loggers.c loggers.h)
+add_executable(project_2 client_U1.c utils.c utils.h)
