--- a/projects/project_2/stage1/Makefile
+++ b/projects/project_2/stage1/Makefile
@@ -2,19 +2,19 @@ CC = gcc
 CFLAGS = -Wall -pthread
 DEPS = utils.h
 OBJ = utils.o
-TARGETS = client_U1 server_Q1
+TARGETS = U1 Q1
 
-all: client_U1 server_Q1
+all: U1 Q1
 
 %.o: %.c $(DEPS)
 	@$(CC) $(CFLAGS) -c -o $@ $<
 	@echo $@
 
-client_U1: $(OBJ)
+U1: $(OBJ)
 	@$(CC) $(CFLAGS) -o $@ $@.c $(OBJ) -lm
 	@echo $@
 
-server_Q1: $(OBJ)
+Q1: $(OBJ)
 	@$(CC) $(CFLAGS) -o $@ $@.c $(OBJ) -lm
 	@echo $@
 
