--- a/projects/project_2/stage1/Makefile
+++ b/projects/project_2/stage1/Makefile
@@ -18,5 +18,32 @@ Q1: $(OBJ)
 	@$(CC) $(CFLAGS) -o $@ $@.c $(OBJ) -lm
 	@echo $@
 
+test: all
+	@echo "Starting Tests ..."
+	@./test -q 1 -u 1 -f fifo.server | tee result.log
+	@echo "----------------------------"
+	@./test -q 2 -u 3 -f fifo.server | tee -a result.log
+	@echo "----------------------------"
+	@./test -q 5 -u 5 -f fifo.server | tee -a result.log
+	@echo "----------------------------"
+	@./test -q 2 -u 5 -f fifo.server | tee -a result.log
+	@echo "----------------------------"
+	@./test -q 10 -u 10 -f fifo.server | tee -a result.log
+	@echo "----------------------------"
+	@./test -q 10 -u 5 -f fifo.server | tee -a result.log
+	@echo "----------------------------"
+	@./test -q 15 -u 10 -f fifo.server | tee -a result.log
+	@echo "----------------------------"
+	@./test -q 30 -u 35 -f fifo.server | tee -a result.log
+	@echo "----------------------------"
+	@./test -q 70 -u 80 -f fifo.server | tee -a result.log
+	@echo "----------------------------"
+
+	@echo "\033[1;32mTests PASSED:" $(shell grep "PASSED" result.log | wc -l);
+	@echo "\033[1;31mTests FAILED:" $(shell grep "FAILED" result.log | wc -l);
+
+	@rm result.log
+	@make -s clean
+
 clean:
 	@rm *.o $(TARGETS)
