--- a/projects/project_2/stage2/Makefile
+++ b/projects/project_2/stage2/Makefile
@@ -21,23 +21,23 @@ Q2: $(OBJ)
 test: all
 	@echo "Starting Tests ..."
 	@touch result.log
-	@./test -q 2 -u 3 -f fifo.server | tee -a result.log
+	@./test -q 2 -u 3 -f fifo.server -n 5 | tee -a result.log
 	@echo "----------------------------"
-	@./test -q 5 -u 5 -f fifo.server | tee -a result.log
+	@./test -q 5 -u 5 -f fifo.server -n 1 | tee -a result.log
 	@echo "----------------------------"
-	@./test -q 2 -u 5 -f fifo.server | tee -a result.log
+	@./test -q 2 -u 5 -f fifo.server -n 2 | tee -a result.log
 	@echo "----------------------------"
-	@./test -q 10 -u 10 -f fifo.server | tee -a result.log
+	@./test -q 10 -u 10 -f fifo.server -n 20 | tee -a result.log
 	@echo "----------------------------"
-	@./test -q 5 -u 10 -f fifo.server | tee -a result.log
+	@./test -q 5 -u 10 -f fifo.server -n 50 | tee -a result.log
 	@echo "----------------------------"
-	@./test -q 10 -u 5 -f fifo.server | tee -a result.log
+	@./test -q 10 -u 5 -f fifo.server -n 0 | tee -a result.log
 	@echo "----------------------------"
-	@./test -q 15 -u 10 -f fifo.server | tee -a result.log
+	@./test -q 15 -u 10 -f fifo.server -n 1000 | tee -a result.log
 	@echo "----------------------------"
-	@./test -q 30 -u 35 -f fifo.server | tee -a result.log
+	@./test -q 30 -u 35 -f fifo.server -n 2 | tee -a result.log
 	@echo "----------------------------"
-	@./test -q 70 -u 80 -f fifo.server | tee -a result.log
+	@./test -q 70 -u 80 -f fifo.server -n 10 | tee -a result.log
 	@echo "----------------------------"
 
 
