added feature - now places can also be limited

--- a/projects/project_2/stage2/Makefile
+++ b/projects/project_2/stage2/Makefile
@@ -39,6 +39,22 @@ test: all
 	@echo "----------------------------"
 	@./test -q 70 -u 80 -f fifo.server -n 10 | tee -a result.log
 	@echo "----------------------------"
+	@./test -q 2 -u 3 -f fifo.server -n 5 -l 3 | tee -a result.log
+	@echo "----------------------------"
+	@./test -q 5 -u 5 -f fifo.server -n 1 -l 20 | tee -a result.log
+	@echo "----------------------------"
+	@./test -q 2 -u 5 -f fifo.server -n 2 -l 5 | tee -a result.log
+	@echo "----------------------------"
+	@./test -q 10 -u 10 -f fifo.server -n 20 -l 10 | tee -a result.log
+	@echo "----------------------------"
+	@./test -q 10 -u 5 -f fifo.server -n 0 -l 2| tee -a result.log
+	@echo "----------------------------"
+	@./test -q 15 -u 10 -f fifo.server -n 1000 -l 20 | tee -a result.log
+	@echo "----------------------------"
+	@./test -q 30 -u 35 -f fifo.server -n 2 -l 4 | tee -a result.log
+	@echo "----------------------------"
+	@./test -q 70 -u 80 -f fifo.server -n 10 -l 100 | tee -a result.log
+	@echo "----------------------------"
 
 
 	@echo "\033[1;32mTests PASSED:" `grep "PASSED" result.log | wc -l`;
