--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ jobs:
     - stage: "Project 2"
     name: "Build and Test - Stage 1"
     script: cd projects/project_2/stage1 && make && make test
+    - script: cd ../stage2 && make && make test
     name: "Build and Test - Stage 2"
-    script: cd ../stage2 && make && make test
