--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,5 @@ language: C
     
 jobs:
   include:
-    - stage: test
-    script: cd projects/project_2/stage1 && make && make test
-    script: cd projects/project_2/stage2 && make && make test
+    - script: cd projects/project_2/stage1 && make && make test
+    - script: cd projects/project_2/stage2 && make && make test
