--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,8 @@ compiler: gcc
 
 language: C
     
-jobs:
-  include:
-    - name: "Project 2 - Stage 1"
-    env: STAGE=stage1
-    - name: "Project 2 - Stage 2"
-    env: STAGE=stage2
+env: 
+  - STAGE=stage1
+  - STAGE=stage2
 
 script: cd projects/project_2/$STAGE && make && make test
